<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadAttendance">

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/Register_number"
        android:inputType="number"
        android:minHeight="48dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"


        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="165dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/select" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="171dp"
        android:text="Button"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:minHeight="48dp" />