<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentHome">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="26dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:text="hint=register number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:text="hint=name"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="224dp" />

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="143dp"
        android:layout_marginTop="300dp"
        android:background="#ADD8E6"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="94dp">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="#ADD8E6"
            android:src="@drawable/ic_feedback"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/feedback"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="143dp"
        android:background="#ADD8E6"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="300dp">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="#ADD8E6"
            android:src="@drawable/ic_mark"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/mark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="143dp"
        android:background="#ADD8E6"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="449dp">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="#ADD8E6"
            android:src="@drawable/ic_attendance"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/attendance"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="143dp"
        android:background="#ADD8E6"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="449dp">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="#ADD8E6"
            android:src="@drawable/ic_notice"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/notice"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>